--- a/CV.tex
+++ b/CV.tex
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 
 %% Adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.85]{geometry}
 
 %% Personal data
 \firstname{}
@@ -33,52 +33,59 @@
 \makecvtitle
 
 \section{Education}
-\cventry{Oct. 2010 - Present}{MEng Electronic Engineering with Artificial Intelligence}{University of Southampton}{}{\textit{1$^{st}$class at BEng level and expecting a 1$^{st}$ class degree}}{}  % arguments 3 to 6 can be left empty
-\cvitem{Modules}{
+\cventry{Oct. 2010 - Jun. 2014}{Master of Engineering}{with First Class Honours}{in Electronic Engineering with Artificial Intelligence}{University of Southampton}{
+	Modules include
    Analogue Electronics,
    Computer Systems, 
    Control Theory,
    Digital IC Design, 
    Design and Test of Digital Systems, 
+   Electromagnetic Fields and Waves,
    Evolution of Complexity,
+   Image Processing,
    Intelligent Algorithms,
    Machine Learning,
-   Semiconductor Devices, 
-   Signal Processing 
-   and many more...  
-}
-\cventry{Sept. 2008 - June 2010}{College}{Alton College}{Alton, Hampshire}{}{}
-\cvitemwithcomment{2010}{Advanced Level}{Electronics (A*), Mathematics (A), Physics (A)}
-\cvitemwithcomment{2009}{Advanced Level Subsidiary}{Computing (A)}
-\cventry{Sept. 2003 - June 2008}{Secondary School}{Amery Hill}{Alton, Hampshire}{}{}
-\cvitemwithcomment{2008}{GCSEs}{Art, Biology, Chemistry, Design and Technology, English, Geography, ICT, Mathematics and Physics}
+   Mangement,
+   Semiconductor Devices,   
+   Signal Processing   
+   and
+	Software Development
+}{}
+\cventry{Sept. 2008 - June 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A)}
+\cventry{Sept. 2003 - June 2008}{GCSEs}{}{Amery Hill Secondary School, Alton, Hampshire}{}{Art(D), Biology(A), Chemistry(A), Design and Technology(A*), English Language(B), English Literature(C), Geography(B), ICT(B), Mathematics(A*) and Physics(A)}
 
 
 \section{Work Experience}
 
-\cventry{July 2012 - Sept. 2013}{Cambridge Silicon Radio (CSR) plc}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{Student Placement}{Working with the digital design team assisting with the development of their Near Field Communications (NFC) technology. This was 20 weeks in total divided over two summers. }
-\cventry{July. 2008 - Sept. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{Customer Service Assistant}{Assisting customers and operating both traditional and self-serve checkouts. }
-\cventry{July. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{Assistant to the head gardener}{Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
+\cventry{July 2012 - Sept. 2013}{Cambridge Silicon Radio (CSR) plc}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{Student Placement}
+		{Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
+		Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
+		This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
+\cventry{July. 2008 - Sept. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
+\cventry{July. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{Assistant to the head gardener}{
+		Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
 
 
 \section{Additional Qualifications and Achievements}
+\cvitemwithcomment{Jun. 2014}{Captec Award for Entrepreneurial Industrial Innovation}{Excellence award approved by Professor Max Toti.}
 \cvitemwithcomment{Feb. 2014}{EMECS-thon Winner}{Best "Internet of Things" Implementation at the University of Southampton.}
 \cvitemwithcomment{Nov. 2013}{UKESF Scholar of the Year             }{Presented at the National Microelectronics Institute gala dinner.}
-\cvitemwithcomment{Jan. 2012 - Present}{UK Electronics Skills Foundation Scholar}{UKESF is a collaboration between industry, universities and the public sector.}
+\cvitemwithcomment{Jan. 2012 - Jun. 2014}{UK Electronics Skills Foundation Scholar}{UKESF is a collaboration between industry, universities and the public sector.}
 \cvitemwithcomment{2009 - Present}{Full clean UK Driving License}{}
 
-\section{Extra Curricular}
+\section{Hobbies and Interests}
 \cvitem{Film}{Avid film fan with a passion for science-fiction.}
 \cvitem{Game/Rough Shooting}{Have been a member of a pheasant shooting syndicate in the past also pigeons, ground game and the odd clay. Actively involved in this outdoor pursuit during the summer and winter months.}
 \cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onwards. Using microcontrollers, FPGAs and analogue circuits.}
 \cvitem{Off-Roading}{Land Rover owner in the past. Lots of green laning around Hampshire.}
-\cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website.}
+\cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
-\cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts.}
+\cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts. 
+				I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
 \cvitem{Address}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ UK}
-\cvitem{Email}{ajr2g10@ecs.soton.ac.uk}
+\cvitem{Email}{ashley181291@gmail.com}
 \cvitem{Mobile}{07554162860}
 \section{References}
 \cvitem{Mr Fash Nowshadi}{
