started versioning CV

--- a/CV.tex
+++ b/CV.tex
@@ -8,6 +8,7 @@
 
 %% Character encoding
 \usepackage[utf8]{inputenc}
+\usepackage[nodayofweek]{datetime}
 
 %% Adjust the page margins
 \usepackage[scale=0.85]{geometry}
@@ -51,7 +52,7 @@
    and
 	Software Development
 }{}
-\cventry{Sept. 2008 - June 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A)}
+\cventry{Sept. 2008 - June 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A). AS-Level Computing(A).}
 \cventry{Sept. 2003 - June 2008}{GCSEs}{}{Amery Hill Secondary School, Alton, Hampshire}{}{Art(D), Biology(A), Chemistry(A), Design and Technology(A*), English Language(B), English Literature(C), Geography(B), ICT(B), Mathematics(A*) and Physics(A)}
 
 
@@ -77,15 +78,16 @@
 \cvitem{Film}{Avid film fan with a passion for science-fiction.}
 \cvitem{Game/Rough Shooting}{Have been a member of a pheasant shooting syndicate in the past also pigeons, ground game and the odd clay. Actively involved in this outdoor pursuit during the summer and winter months.}
 \cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onwards. Using microcontrollers, FPGAs and analogue circuits.}
-\cvitem{Off-Roading}{Land Rover owner in the past. Lots of green laning around Hampshire.}
+\cvitem{Off-Roading}{Land Rover owner in the past along with a couple of motocross bikes. Lots of green laning around Hampshire.}
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
 \cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts. 
 				I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
-\cvitem{Address}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ UK}
-\cvitem{Email}{ashley181291@gmail.com}
+\cvitem{Address}{Mr Ashley J. Robinson, 6 Ferney Close, Chawton, Hampshire, GU34 1SQ, England, UK}
+\cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
+\cvitem{Email}{\href{mailto:ashley181291@gmail.com}{ashley181291@gmail.com}}
 \cvitem{Mobile}{07554162860}
 \section{References}
 \cvitem{Mr Fash Nowshadi}{
@@ -107,18 +109,16 @@ Email: \href{mailto:nrh@ecs.soton.ac.uk}{nrh@ecs.soton.ac.uk}
 }
 
 \section{Media Presence}
-\cvitem{My Website}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
 \cvitem{EMECS-thon}{\href{http://youtu.be/0NC3W49Lj-A}{http://youtu.be/0NC3W49Lj-A}}
 \cvitem{UKESF}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
 \cvitem{UKESF-ECS}{\href{http://www.ecs.soton.ac.uk/news/4376}{http://www.ecs.soton.ac.uk/news/4376}}
 
-%\section{Education}
-%\cventry{year--year}{Degree}{Institution}{City}{ \textit{Grade} }{Description}  % arguments 3 to 6 can be left empty
-%\cvitem{title}{ \emph{Title} }
-%\cvitemwithcomment{Language 1}{Skill level}{Comment}
-%\cvdoubleitem{category X}{XXX, YYY, ZZZ}{category Y}{XXX, YYY, ZZZ}
-%\cvlistitem{Item 1}
-%\cvlistdoubleitem{Item 2}{Item 3}
-%\bibliography{publications}
+
+\section{Version Control }
+\cvitem{CV Date}{\today}
+\cvitem{Version}{1.0}
+
+
+
 \end{document}
 
