--- a/CV.tex
+++ b/CV.tex
@@ -57,13 +57,19 @@
 
 
 \section{Work Experience}
+\cventry{Sep. 2012 - Present}{Cambridge Design Partnership LLP}{Church Road, Toft, Cambridge, CB23 2RF}{}{Graduate Electronic Engineer}
+		{	A technology and product design consultancy. 
+			Working on many cross discipline projects but remaining focussed on the application of electronics; typically in consumer products.
+		 	Core skills applied include analogue circuit design, PCB layout and digital hardware design with concurrent low level software development. 
+			Additional skills practiced range from basic mechanical engineering to high software level development.
+		}
 
-\cventry{July 2012 - Sept. 2013}{Cambridge Silicon Radio (CSR) plc}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{Student Placement}
+\cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{Student Placement}
 		{Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
 		Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
 		This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
-\cventry{July. 2008 - Sept. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
-\cventry{July. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{Assistant to the head gardener}{
+\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
+\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{Assistant to the head gardener}{
 		Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
 
 
