added blogs and references

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -57,19 +57,19 @@ Software Development
 
 
 \section{Work Experience}
-\cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{Church Road, Toft, Cambridge, CB23 2RF}{}{Electronic Engineer}
+\cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{Church Road, Toft, Cambridge, CB23 2RF}{}{\newline Electronics Engineer}
 {  A technology and product design consultancy. 
-Working on many cross discipline projects but remaining focussed on the application of electronics; typically in consumer products.
+Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
 Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
 Additional skills practiced range from basic mechanical engineering to high level software development.
 }
 
-\cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{Student Placement}
+\cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ}{}{\newline Student Placement}
 {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
 Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
 This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
-\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
-\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{Assistant to the head gardener}{
+\cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{Draymans Way, Alton GU34 1SS}{}{\newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
+\cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{\newline Assistant to the head gardener}{
 Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
 
 
@@ -83,7 +83,7 @@ Maintaining the grounds of homes and businesses, large and small, in the Alton, 
 \section{Hobbies and Interests}
 \cvitem{Film}{Avid film fan with a passion for science-fiction.}
 \cvitem{Game/Rough Shooting}{Have been a member of a pheasant shooting syndicate in the past also pigeons, ground game and the odd clay. Actively involved in this outdoor pursuit during the summer and winter months.}
-\cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onwards. Using microcontrollers, FPGAs and analogue circuits.}
+\cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onward. Using microcontrollers, FPGAs and analogue circuits.}
 \cvitem{Off-Roading}{Land Rover owner in the past along with a couple of motocross bikes. Lots of green laning around Hampshire.}
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
@@ -95,7 +95,18 @@ I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many deto
 \cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
 \cvitem{Email}{\href{mailto:ashley181291@gmail.com}{ashley181291@gmail.com}}
 \cvitem{Mobile}{07557506617}
+
 \section{References}
+\cvitem{Mr Richard Hunt}{
+Cambridge Design Partnership,
+Church Road, Toft,
+Cambridge,
+CB23 2RF
+UK
+\newline Email:  \href{mailto:rnh@cambridge-design.co.uk}{rnh@cambridge-design.co.uk}
+\newline Tel: +44 (0) 1223 264428
+}
+
 \cvitem{Mr Fash Nowshadi}{
 CSR, Churchill House,
 Cambridge Business Park,
@@ -103,7 +114,7 @@ Cowley Road,
 Cambridge,
 CB4 0WZ
 UK
-Email:  \href{mailto:Fash.Nowshadi@csr.com}{Fash.Nowshadi@csr.com}
+\newline Email:  \href{mailto:Fash.Nowshadi@csr.com}{Fash.Nowshadi@csr.com}
 }
 \cvitem{Dr Nick R Harris}{
 Personal Tutor, University of Southampton, 
@@ -111,19 +122,25 @@ University Rd,
 Southampton,
 SO17 1BJ 
 UK
-Email: \href{mailto:nrh@ecs.soton.ac.uk}{nrh@ecs.soton.ac.uk}
+\newline Email: \href{mailto:nrh@ecs.soton.ac.uk}{nrh@ecs.soton.ac.uk}
 }
 
 \section{Media Presence}
-\cvitem{EMECS-thon}{\href{http://youtu.be/0NC3W49Lj-A}{http://youtu.be/0NC3W49Lj-A}}
-\cvitem{UKESF}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
-\cvitem{UKESF-ECS}{\href{http://www.ecs.soton.ac.uk/news/4376}{http://www.ecs.soton.ac.uk/news/4376}}
+\cvitem{ECS: Careers}{\href{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}}
+\cvitem{CDP: Meet the Team}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
+\cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{http://youtu.be/0NC3W49Lj-A}}
+\cvitem{UKESF: WInner}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
+\cvitem{UKESF-ECS: Finalist}{\href{http://www.ecs.soton.ac.uk/news/4376}{http://www.ecs.soton.ac.uk/news/4376}}
+
 
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.0} % major update on job or education change
+\cvitem{Version}{2.1} 
 
+%  2.1 Added blog post from CDP
+%  2.0 Started at CDP
+%  1.0   At uni
 
 
 
