added  battery blog

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -127,18 +127,26 @@ UK
 }
 
 \section{Media Presence}
-\cvitem{ECS: Careers}{\href{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}}
-\cvitem{CDP: Meet the Team}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
-\cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{http://youtu.be/0NC3W49Lj-A}}
-\cvitem{UKESF: WInner}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
-\cvitem{UKESF-ECS: Finalist}{\href{http://www.ecs.soton.ac.uk/news/4376}{http://www.ecs.soton.ac.uk/news/4376}}
+
+\cvitem{CDP: Safe Battery Charging}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/exploding_batteries}{www.cambridge-design.co.uk/news-and-articles/blog/exploding\_batteries}}
+
+\cvitem{ECS: Careers}{\href{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}{blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}}
+
+\cvitem{CDP: Meet the Team}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
+
+\cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{youtu.be/0NC3W49Lj-A}}
+
+\cvitem{UKESF: WInner}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
+
+\cvitem{UKESF-ECS: Finalist}{\href{http://www.ecs.soton.ac.uk/news/4376}{www.ecs.soton.ac.uk/news/4376}}
 
 
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.2} 
+\cvitem{Version}{2.3} 
 
+%	2.3 Added blog on battery charging
 %	2.2 Removed some commas and tweak a word
 %	2.1 Added blog post from CDP
 %	2.0 Started at CDP
@@ -147,4 +155,3 @@ UK
 
 
 
-\end{document}
