updated title, address and email

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -58,7 +58,7 @@
 
 
 \section{Work Experience}
-\cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF \newline Electronics Engineer}
+\cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF \newline Consultant Electronics Engineer}
 		{	A technology and product design consultancy. 
 			Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
 		 	Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
@@ -92,9 +92,9 @@
 				I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
-\cvitem{Address}{Mr Ashley J. Robinson, 48 Hillcrest, Bar Hill, Cambridgeshire, CB23 8TG, England, UK}
+\cvitem{Address}{Mr Ashley J. Robinson, 2 Kerridge Close, Cambridge, Cambridgeshire, CB1 2QW, England, UK}
 \cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
-\cvitem{Email}{\href{mailto:ashley181291@gmail.com}{ashley181291@gmail.com}}
+\cvitem{Email}{\href{mailto:ashley@ajrobinson.org}{ashley@ajrobinson.org}}
 \cvitem{Mobile}{07557506617}
 
 \section{References}
@@ -144,8 +144,9 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.3} 
+\cvitem{Version}{2.4} 
 
+%	2.4 Changed job title, address and email
 %	2.3 Added blog on battery charging
 %	2.2 Removed some commas and tweak a word
 %	2.1 Added blog post from CDP
@@ -155,3 +156,4 @@ UK
 
 
 
+\end{document}
