added new blog at CDP

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -128,11 +128,13 @@ UK
 
 \section{Media Presence}
 
-\cvitem{CDP: Safe Battery Charging}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/exploding_batteries}{www.cambridge-design.co.uk/news-and-articles/blog/exploding\_batteries}}
+\cvitem{CDP: Blogs}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/flaming-hoverboards}{www.cambridge-design.co.uk/news-and-articles/blog/flaming-hoverboards}}
+
+\cvitem{}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/exploding_batteries}{www.cambridge-design.co.uk/news-and-articles/blog/exploding\_batteries}}
+
+\cvitem{}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
 
 \cvitem{ECS: Careers}{\href{https://blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}{blog.soton.ac.uk/careershub/2014/12/15/hearing-from-our-graduates-ashley-robinson-at-cdp/}}
-
-\cvitem{CDP: Meet the Team}{\href{http://www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}{www.cambridge-design.co.uk/news-and-articles/blog/meet-ashley-our-near-field-communications-expert}}
 
 \cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{youtu.be/0NC3W49Lj-A}}
 
@@ -144,8 +146,9 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.4} 
+\cvitem{Version}{2.5} 
 
+%   2.5 Another blog post at CDP
 %	2.4 Changed job title, address and email
 %	2.3 Added blog on battery charging
 %	2.2 Removed some commas and tweak a word
