--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -36,7 +36,7 @@
 
 \section{Education}
 \cventry{Oct. 2010 - Jun. 2014}{Master of Engineering}{with First Class Honours}{in Electronic Engineering with Artificial Intelligence}{University of Southampton}{
-	Modules include
+   Modules include
    Analogue Electronics,
    Computer Systems, 
    Control Theory,
@@ -51,7 +51,7 @@
    Semiconductor Devices,   
    Signal Processing   
    and
-	Software Development
+   Software Development
 }{}
 \cventry{Sept. 2008 - June 2010}{A-Levels}{}{Alton College, Alton, Hampshire}{}{Electronics (A*), Mathematics (A) and Physics (A). AS-Level Computing(A).}
 \cventry{Sept. 2003 - June 2008}{GCSEs}{}{Amery Hill Secondary School, Alton, Hampshire}{}{Art(D), Biology(A), Chemistry(A), Design and Technology(A*), English Language(B), English Literature(C), Geography(B), ICT(B), Mathematics(A*) and Physics(A)}
@@ -59,19 +59,19 @@
 
 \section{Work Experience}
 \cventry{Sep. 2014 - Present}{Cambridge Design Partnership LLP}{}{}{Church Road, Toft, Cambridge, CB23 2RF \newline Consultant Electronics Engineer}
-		{	A technology and product design consultancy. 
-			Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
-		 	Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
-			Additional skills exercised range from basic mechanical engineering to high level software development.
-		}
+      {  A technology and product design consultancy. 
+         Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
+         Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
+         Additional skills exercised range from basic mechanical engineering to high level software development.
+      }
 
 \cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
-		{Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
-		Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
-		This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
+      {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
+      Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
+      This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
 \cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
 \cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{\newline Assistant to the head gardener}{
-		Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
+      Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
 
 
 \section{Additional Qualifications and Achievements}
@@ -89,10 +89,10 @@
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
 \cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts. 
-				I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
+            I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
-\cvitem{Address}{Mr Ashley J. Robinson, 2 Kerridge Close, Cambridge, Cambridgeshire, CB1 2QW, England, UK}
+\cvitem{Address}{Mr Ashley J. Robinson, 32 Malt House Place, Green Drift, Royston, Hertfordshire, England, UK}
 \cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
 \cvitem{Email}{\href{mailto:ashley@ajrobinson.org}{ashley@ajrobinson.org}}
 \cvitem{Mobile}{07557506617}
@@ -146,15 +146,16 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.5} 
+\cvitem{Version}{2.6} 
 
+%  2.6 Update address
 %   2.5 Another blog post at CDP
-%	2.4 Changed job title, address and email
-%	2.3 Added blog on battery charging
-%	2.2 Removed some commas and tweak a word
-%	2.1 Added blog post from CDP
-%	2.0 Started at CDP
-%	1.0	At uni
+%  2.4 Changed job title, address and email
+%  2.3 Added blog on battery charging
+%  2.2 Removed some commas and tweak a word
+%  2.1 Added blog post from CDP
+%  2.0 Started at CDP
+%  1.0   At uni
 
 
 
