added skills section

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -81,6 +81,16 @@
 \cvitemwithcomment{Jan. 2012 - Jun. 2014}{UK Electronics Skills Foundation Scholar}{UKESF is a collaboration between industry, universities and the public sector.}
 \cvitemwithcomment{2009 - Present}{Full clean UK Driving License}{}
 
+\section{Skills}
+\cvitem{PCB Design}{Design of electronic circuits using \textbf{Altium}, \textbf{Eagle} and \textbf{KiCad} schematic capture/layout tools and \textbf{SPICE} simulations. Analogue, digital, mixed signal, switch mode power supplies, high speed digital interfaces, low power and common frequency RF.}
+\cvitem{FPGA}{Designed digital modules in \textbf{Verilog} and simulation using \textbf{ModelSim}, \textbf{Cadence} and \textbf{Icarus}.}
+\cvitem{ASIC}{Design and simulation of custom libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic}.}
+\cvitem{Embedded Software}{Developed embedded software on Atmel, Microchip and STM32 microcontrollers. Mainly in the \textbf{C} programming language and often using \textbf{FreeRTOS}.}
+\cvitem{Software}{Developed CLI and GUI applications using \textbf{C\#} and \textbf{Python} and basic server side applications in \textbf{PHP}.}
+\cvitem{Modeling and Simulation}{In depth modeling and simulation of custom electronic components and physical principals using \textbf{Matlab} and \textbf{SciPy}.}
+\cvitem{Mechanical}{Basic CAD experience in \textbf{FreeCAD} and use of FDM/Polyjet 3D printing technology.}
+\cvitem{Project Management}{Involved in proposal writing and planning for multi-discipline work packages. Electronics/software lead on several 2 to 4 team member projects.}
+
 \section{Hobbies and Interests}
 \cvitem{Film}{Avid film fan with a passion for science-fiction.}
 \cvitem{Game/Rough Shooting}{Have been a member of a pheasant shooting syndicate in the past also pigeons, ground game and the odd clay. Actively involved in this outdoor pursuit during the summer and winter months.}
@@ -146,8 +156,9 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.6} 
+\cvitem{Version}{2.7} 
 
+%  2.7 Added skills section
 %  2.6 Update address
 %   2.5 Another blog post at CDP
 %  2.4 Changed job title, address and email
