--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -47,7 +47,7 @@
    Image Processing,
    Intelligent Algorithms,
    Machine Learning,
-   Mangement,
+   Management,
    Semiconductor Devices,   
    Signal Processing   
    and
@@ -62,7 +62,8 @@
       {  A technology and product design consultancy. 
          Working on many cross discipline projects but remaining focused on the application of electronics; typically in consumer products.
          Core skills applied include analogue circuit design, PCB design and digital hardware design with concurrent low level software development. 
-         Additional skills exercised range from basic mechanical engineering to high level software development.
+         Additional skills exercised range from basic mechanical engineering to high level software development.       
+Recently I have been involved in many projects using inertial measurement units (IMUs) and other sensors to track user behavior. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
       }
 
 \cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
@@ -82,22 +83,25 @@
 \cvitemwithcomment{2009 - Present}{Full clean UK Driving License}{}
 
 \section{Skills}
-\cvitem{PCB Design}{Design of electronic circuits using \textbf{Altium}, \textbf{Eagle} and \textbf{KiCad} schematic capture/layout tools and \textbf{SPICE} simulations. Analogue, digital, mixed signal, switch mode power supplies, high speed digital interfaces, low power and common frequency RF.}
+\cvitem{Electronics Design}{Design of electronic circuits using \textbf{Altium}, \textbf{Eagle} and \textbf{KiCad} schematic capture/layout tools and \textbf{SPICE} simulations. Analogue, digital, mixed signal, switch mode power supplies, high speed digital interfaces, low power and common frequency RF.}
+\cvitem{Electronics Test}{Extensive use of basic test equipment. Multimeters, oscilloscopes, programmable loads, spectrum analysers, signal generators and LCR (Inductance, Capacitance and Resistance) meters to as low as Femto Farads. Electromagnetic compatibility (EMC) testing for radiation, immunity and electrostatic discharge (ESD). }
+\cvitem{Electronics Manufacture}{Prototyping skills using stripboard/copper-clad, hand assemble techniques down to 0402 passives and 0.5mm pitch discrete components, high volume (1M+/year) component sourcing, outsourcing PCB layout and working with small/large volume (1M+/year) contract electronics manufacturers (CEMs). Familiarity with EMC, low voltage and waste electronics EU directives. }
 \cvitem{FPGA}{Designed digital modules in \textbf{Verilog} and simulation using \textbf{ModelSim}, \textbf{Cadence} and \textbf{Icarus}.}
 \cvitem{ASIC}{Design and simulation of custom libraries and integration for \textbf{VLSI} chip manufacture using \textbf{Magic}.}
 \cvitem{Embedded Software}{Developed embedded software on Atmel, Microchip and STM32 microcontrollers. Mainly in the \textbf{C} programming language and often using \textbf{FreeRTOS}.}
 \cvitem{Software}{Developed CLI and GUI applications using \textbf{C\#} and \textbf{Python} and basic server side applications in \textbf{PHP}.}
-\cvitem{Modeling and Simulation}{In depth modeling and simulation of custom electronic components and physical principals using \textbf{Matlab} and \textbf{SciPy}.}
+\cvitem{Modeling and Simulation}{In depth modeling and simulation of custom electronic components and physical principals using \textbf{Matlab} and \textbf{SciPy}. Experience with \textbf{SciKit-learn} machine learning library.}
 \cvitem{Mechanical}{Basic CAD experience in \textbf{FreeCAD} and use of FDM/Polyjet 3D printing technology.}
-\cvitem{Project Management}{Involved in proposal writing and planning for multi-discipline work packages. Electronics/software lead on several 2 to 4 team member projects.}
+\cvitem{Project Management}{Involved in proposal writing and planning for multi-discipline work packages. Managed projects lasting over 6 months worth £150K in company fees with a 3 member team. Electronics/software lead on several 2 to 4 team member projects.}
 
 \section{Hobbies and Interests}
 \cvitem{Film}{Avid film fan with a passion for science-fiction.}
-\cvitem{Game/Rough Shooting}{Have been a member of a pheasant shooting syndicate in the past also pigeons, ground game and the odd clay. Actively involved in this outdoor pursuit during the summer and winter months.}
+\cvitem{Clay Shooting}{Clay pigeon shooting since the age of 16 usually sporting layouts.}
 \cvitem{Hobbyist Electronics}{Audio equipment, radios and robots. Many projects using electronics and maths skills acquired from the age of 15 onward. Using microcontrollers, FPGAs and analogue circuits.}
 \cvitem{Off-Roading}{Land Rover owner in the past along with a couple of motocross bikes. Lots of green laning around Hampshire.}
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
+\cvitem{Surfing}{I have been surfing for two years now and recently brought my first surfboard.}
 \cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts. 
             I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
@@ -148,16 +152,15 @@ UK
 
 \cvitem{EMECS-thon: Winner}{\href{http://youtu.be/0NC3W49Lj-A}{youtu.be/0NC3W49Lj-A}}
 
-\cvitem{UKESF: WInner}{\href{http://www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}{www.ukesf.org/news/articles/2013-ukesf-scholar-of-year}}
-
 \cvitem{UKESF-ECS: Finalist}{\href{http://www.ecs.soton.ac.uk/news/4376}{www.ecs.soton.ac.uk/news/4376}}
 
 
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.7} 
+\cvitem{Version}{2.8} 
 
+% 2.8 Removed UKESF link and added details on wearables plus hobbies
 %  2.7 Added skills section
 %  2.6 Update address
 %   2.5 Another blog post at CDP
@@ -172,3 +175,5 @@ UK
 
 
 \end{document}
+
+
