added gvm, changed address, removed fash and added travels

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -102,42 +102,36 @@ Recently I have been involved in many projects using inertial measurement units 
 \cvitem{Programming}{On both Windows and Linux environments. Assembler, C, C\#, PHP, Python and Verilog/SystemVerilog. Constructed my own website which contains a growing list of software projects.}
 \cvitem{Music}{Enthusiastic guitar player. Broad range of music taste.}
 \cvitem{Surfing}{I have been surfing for two years now and recently brought my first surfboard.}
-\cvitem{Travel}{I enjoy backpacking and camping. I have been on self organised camping trips across Scotland and Europe also many other places throughout England during my time in the Scouts. 
-            I've toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
+\cvitem{Travel}{I have backpacked across India staying at hostels from Delhi to Mumbai and Goa. I have been on self organised camping trips across the USA, Scotland and Europe also many other places throughout England during my time in the Scouts. 
+            I have also toured Canada by RV and train from Vancouver to Montr\'{e}al with many detours.}
 
 \section{Contact Details}
-\cvitem{Address}{Mr Ashley J. Robinson, 32 Malt House Place, Green Drift, Royston, Hertfordshire, England, UK}
+\cvitem{Address}{Mr Ashley J. Robinson, 6 Ferney Close, Chawton, Alton, Hampshire, GU34 1SQ, England, UK}
 \cvitem{Web}{\href{http://www.ajrobinson.org}{http://www.ajrobinson.org}}
 \cvitem{Email}{\href{mailto:ashley@ajrobinson.org}{ashley@ajrobinson.org}}
-\cvitem{Mobile}{07557506617}
+\cvitem{Mobile}{+44 (0) 7557506617}
 
 \section{References}
 \cvitem{Mr Richard Hunt}{
 Cambridge Design Partnership,
 Church Road, Toft,
 Cambridge,
-CB23 2RF
+CB23 2RF,
+England,
 UK
 \newline Email:  \href{mailto:rnh@cambridge-design.co.uk}{rnh@cambridge-design.co.uk}
 \newline Tel: +44 (0) 1223 264428
 }
 
-\cvitem{Mr Fash Nowshadi}{
-CSR, Churchill House,
-Cambridge Business Park,
-Cowley Road,
-Cambridge,
-CB4 0WZ
-UK
-\newline Email:  \href{mailto:Fash.Nowshadi@csr.com}{Fash.Nowshadi@csr.com}
-}
-\cvitem{Dr Nick R Harris}{
-Personal Tutor, University of Southampton, 
-University Rd, 
+\cvitem{Dr Geoff Merrett}{
+University of Southampton, 
+University Road, 
 Southampton,
-SO17 1BJ 
+SO17 1BJ,
+England,
 UK
-\newline Email: \href{mailto:nrh@ecs.soton.ac.uk}{nrh@ecs.soton.ac.uk}
+\newline Email: \href{mailto:gvm@ecs.soton.ac.uk}{gvm@ecs.soton.ac.uk}
+\newline Tel: +44 (0) 2380 592775
 }
 
 \section{Media Presence}
@@ -158,22 +152,21 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.8} 
+\cvitem{Version}{2.9} 
 
-% 2.8 Removed UKESF link and added details on wearables plus hobbies
+%  2.9 Changed academic reference to GVM after meeting at UKESF event. Removed Fash as he is no longer at CSR. Also added to travel interests. Changed address.
+%  2.8 Removed UKESF link and added details on wearables plus hobbies
 %  2.7 Added skills section
 %  2.6 Update address
-%   2.5 Another blog post at CDP
+%  2.5 Another blog post at CDP
 %  2.4 Changed job title, address and email
 %  2.3 Added blog on battery charging
 %  2.2 Removed some commas and tweak a word
 %  2.1 Added blog post from CDP
 %  2.0 Started at CDP
-%  1.0   At uni
+%  1.0 At uni
 
 
 
 
 \end{document}
-
-
