summer placement duration

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -66,10 +66,10 @@
 Recently I have been involved in many projects using inertial measurement units (IMUs) and other sensors to track user behavior. This has been in the capacity of wearable technology for sports applications but also to gain user insights. A typical example would be instrumenting an existing product so a piece of electronics can wake-on-motion to log accelerometer and gyroscope data to later gain insights to use frequency and handling. Wearable sensor development has involved writing algorithms from the ground up to compute bio-mechanical metrics from raw IMU data which is then validated with motion capture equipment.
       }
 
-\cventry{Jul. 2012 - Sep. 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
+\cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
       {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
       Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
-      This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. }
+      This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. Each summer placement was 10 weeks long.}
 \cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
 \cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{\newline Assistant to the head gardener}{
       Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
@@ -152,8 +152,9 @@ UK
 
 \section{Version Control }
 \cvitem{CV Date}{\today}
-\cvitem{Version}{2.9} 
+\cvitem{Version}{2.10} 
 
+%  2.10 Changed summer placement to indicate only summers
 %  2.9 Changed academic reference to GVM after meeting at UKESF event. Removed Fash as he is no longer at CSR. Also added to travel interests. Changed address.
 %  2.8 Removed UKESF link and added details on wearables plus hobbies
 %  2.7 Added skills section
