summer placement duration edit

--- a/AshleyRobinsonCV.tex
+++ b/AshleyRobinsonCV.tex
@@ -69,7 +69,7 @@ Recently I have been involved in many projects using inertial measurement units 
 \cventry{Summer 2012  Summer 2013}{Cambridge Silicon Radio (CSR) PLC}{}{}{Churchill House, Cambridge Business Park, Cowley Road, Cambridge, CB4 0WZ \newline Student Placement}
       {Working with the digital design team assisting with the development and verification of their Near Field Communications (NFC) technology. 
       Side projects included verification of an LCD hardware driver and designing a serial to parallel converter for in-house test hardware.
-      This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR. Each summer placement was 10 weeks long.}
+      This was 20 weeks in total divided over two summers. I was awarded UKESF Scholar of the Year partly based upon my achievements at CSR.}
 \cventry{Jul. 2008 - Sep. 2010}{Sainsbury's plc}{}{}{Draymans Way, Alton GU34 1SS \newline Customer Service Assistant}{Assisting customers along with operating both traditional and self-serve checkouts. }
 \cventry{Jul. 2006 - Oct. 2013}{M.J.Robinson Garden Maintenance}{6 Ferney Close, Chawton, Hampshire, GU34 1SQ}{}{\newline Assistant to the head gardener}{
       Maintaining the grounds of homes and businesses, large and small, in the Alton, Hampshire area.}
@@ -171,3 +171,4 @@ UK
 
 
 \end{document}
+
